--- a/index.html
+++ b/index.html
@@ -19,32 +19,20 @@
 
         <button>
             <img src="./images/plus.svg" alt="Ícone sinal de + roxo" />
-            Registrar o meu dia
+            <div>Registrar o meu dia</div>
         </button>
     </header>
 
-    <form action="">
+    <form id="form-habits">
         <div class="habits">
-            <div class="habit">🏃</div>
-            <div class="habit">💧</div>
-            <div class="habit">🍎</div>
+            <div class="habit" data-name="run">🏃</div>
+            <div class="habit" data-name="water">💧</div>
+            <div class="habit" data-name="food">🍎</div>
+            <div class="habit" data-name="journal">📰</div>
+            <div class="habit" data-name="takePills">💊</div>
         </div>
 
-        <div class="days">
-            <div class="day">
-                <div>03/01</div>
-                <input type="checkbox" name="run" />
-                <input type="checkbox" name="water" />
-                <input type="checkbox" name="food" />
-            </div>
-
-            <div class="day">
-                <div>04/01</div>
-                <input type="checkbox" name="run" />
-                <input type="checkbox" name="water" />
-                <input type="checkbox" name="food" />
-            </div>
-        </div>
+        <div class="days"></div>
 
     </form>
         
